# FaNDOM

./: ._CMakeCache.txt  ._CMakeLists.txt  ._OMFilter.cpp  ._OMFilter.h  ._OMHelper.cpp  ._OMHelper.h  ._OMIO.cpp  ._OMIO.h  ._SeedGraph.cpp  ._SeedGraph.h  ._fandomAligner.cpp  ._fandomAligner.h  ._main.cpp  ._threadsafe_queue.h  .gitignore  CMakeCache.txt  CMakeLists.txt  FaNDOM  FaNDOM.cbp  GM09888_100000.txt  GM24385_100000.txt  LICENSE  Makefile  OMFilter.cpp  OMFilter.h  OMHelper.cpp  OMHelper.h  OMIO.cpp  OMIO.h  README.md  SV2.py  SV_detect.py  SV_detect_assemble.py  SeedGraph.cpp  SeedGraph.h  _log  autorescale.py  cmake_install.cmake  fandomAligner.cpp  fandomAligner.h  (+10 more)
PythonScript/: CNV_call.py  Preprocess_reference.py  SV_detection_contigs.py  SV_detection_individual.py  assemble_reads.py  cluster_indels.py  filter_assembled_conitg_alignment.py  filter_contig2.py  filter_contigs.py  filter_individual.py  indel_acc.py  indel_detection_contigs.py  indel_detection_individual.py  new_cnv.py  post_process.py  preprocess.py  remove_part.py  split.py  translate.py  wrapper_contigs.py  wrapper_individual.py
log/: GM08331_100000.txt  GM24143_100000.txt  GM24149_100000.txt  NA12878_100000.txt
test_data/: SV.txt  indel.txt  query.cmap  reference.cmap  res.xmap  res_all.xmap  res_all_assembled.xmap  res_final_alignment_untranslate.xmap  res_full.xmap  res_full_post_process.xmap  res_full_post_process_assembled.xmap  res_partial.xmap  res_partial_filtered.xmap  res_partial_filtered_post_process.xmap  res_preprocess.cmap  res_preprocess_dic  test.xmap  test_all.xmap  (+8 more)
(+4 files in other folders)
